# EatWhat

./: ChangeLog  README.md  package.py  setup.cfg
EatWhat/: __main__.py  cli.py  osprofile.py  random.py
