
[metadata]
name = EatWhat
author = singein
author-email = singein@outlook.com
summary = awsome project created by pycman.
license = MIT
description-file = 
    README.rst
home-page = http://example.com
requires-python = >= 3.6

[files]
packages = 
    EatWhat


[entry_points]
console_scripts =
    eatwhat=EatWhat.cli:main
